2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_parse): ignored
	schemes are unhandled by the playlist parser, not ignored

2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_seek_time): when seeking and playing, a seek that
	goes further than the end of the file generates an EOS
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_parse_internal),
	(totem_pl_parser_parse): rework the ignores slightly to avoid adding
	text/plain descendant, and don't mark as to ignore files that aren't
	playlists
	* src/totem-playlist.c: (totem_playlist_add_mrl): handle ignored entries
	and don't add them to the list

2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_directory),
	(totem_pl_parser_ignore), (totem_pl_parser_parse_internal),
	(totem_pl_parser_parse):
	* src/plparse/totem-pl-parser.h: add a TOTEM_PL_PARSER_RESULT_IGNORED
	retval, and use it to avoid ignored files getting in the playlist
	as unhandled files would

2005-07-09  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_ignore):
	ignore text/* and image/* files

2005-07-08  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_with_title),
	(totem_pl_parser_write), (totem_pl_parser_finalize),
	(totem_pl_parser_add_pls), (totem_pl_parser_mimetype_is_ignored),
	(totem_pl_parser_parse_internal),
	(totem_pl_parser_add_ignored_scheme),
	(totem_pl_parser_add_ignored_mimetype):
	* src/plparse/totem-pl-parser.h: add totem_pl_parser_write_with_title ()
	and totem_pl_parser_add_ignored_mimetype() for the benefit of Rhythmbox
	(Closes: #148347)

2005-07-06  Bastien Nocera  <hadess@hadess.net>

	* configure.in: clean up the xine-lib version checking, thanks
	to Thomas for spotting it
