@@ -23,7 +23,6 @@
 	<default>goom</default>
 	<locale name="C">
 	  <short>Name of the visual effects plugins</short>
-	  <long>Name of the visual effects plugins.</long>
 	</locale>
       </schema>
 
@@ -35,7 +34,6 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The brightness of the video</short>
-	  <long>The brightness of the video.</long>
 	</locale>
       </schema>
 
@@ -47,7 +45,6 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The contrast of the video</short>
-	  <long>The contrast of the video.</long>
 	</locale>
       </schema>
 
@@ -59,7 +56,6 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The hue of the video</short>
-	  <long>The hue of the video.</long>
 	</locale>
       </schema>
 
@@ -71,7 +67,6 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The saturation of the video</short>
-	  <long>The saturation of the video.</long>
 	</locale>
       </schema>
 
@@ -83,7 +78,6 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Resize the canvas automatically on file load</short>
-	  <long>Resize the canvas automatically on file load.</long>
 	</locale>
       </schema>
 
@@ -95,7 +89,6 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Repeat mode</short>
-	  <long>Repeat mode.</long>
 	</locale>
       </schema>
 
@@ -107,7 +100,6 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Shuffle mode</short>
-	  <long>Shuffle mode.</long>
 	</locale>
       </schema>
 
@@ -119,7 +111,6 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Enable deinterlacing</short>
-	  <long>Enable deinterlacing.</long>
 	</locale>
       </schema>
 
@@ -131,7 +122,6 @@
 	<default>true</default>
 	<locale name="C">
 	  <short>Whether the sidebar is shown</short>
-	  <long>Whether the sidebar is shown.</long>
 	</locale>
       </schema>
 
@@ -143,7 +133,6 @@
 	<default>false</default>
 	<locale name="C">
 	  <short>Whether to enable debug for the playback engine</short>
-	  <long>Whether to enable debug for the playback engine.</long>
 	</locale>
       </schema>
 
@@ -188,7 +177,6 @@
 	<default>-1</default>
 	<locale name="C">
 	  <short>Width of the video widget</short>
-	  <long>Width of the video widget</long>
         </locale>
       </schema>
 
@@ -200,7 +188,6 @@
 	<default>-1</default>
 	<locale name="C">
 	  <short>Height of the video widget</short>
-	  <long>Height of the video widget</long>
 	</locale>
       </schema>
 
