@@ -1,3 +1,9 @@
+2005-07-09  Christian Neumair  <chris@gnome-de.org>
+
+	* data/totem.schemas.in: Remove long descriptions where they don't
+	provide any additional information. Closes #309896.
+
+
 2005-07-09  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plparse/totem-pl-parser.c: (totem_pl_parser_parse): ignored
